menu now vertical, issue with resizing not changing floats back, main content not shifted

--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -24,3 +24,22 @@
     }
   }
 }
+.hamburger-move-content{
+  margin: 0;
+  right:25%;
+}
+.hamburger-show-menu{
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  right: 0;
+  top: 10%;
+  float: none;
+  text-align: right;
+}
+.hamburger-show-nav-item{
+  display: block;
+}
